@@ -1,16 +1,11 @@
 package name.abuchen.portfolio.datatransfer.pdf;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Scanner;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -33,16 +28,23 @@ public class PDFImportAssistant
         this.client = client;
         this.files = files;
 
+        extractors.add(new AdvanziaBankPDFExtractor(client));
         extractors.add(new AJBellSecuritiesLimitedPDFExtractor(client));
+        extractors.add(new AkfBankPDFExtractor(client));
+        extractors.add(new ArkeaDirectBankPDFExtractor(client));
         extractors.add(new AvivaPLCPDFExtractor(client));
         extractors.add(new BaaderBankPDFExtractor(client));
+        extractors.add(new Bank11PDFExtractor(client));
         extractors.add(new BankSLMPDFExtractor(client));
-        extractors.add(new BarclaysPDFExtractor(client));
+        extractors.add(new BarclaysBankIrelandPLCPDFExtractor(client));
+        extractors.add(new BasellandschaftlicheKantonalbankPDFExtractor(client));
+        extractors.add(new BigbankPDFExtractor(client));
         extractors.add(new BisonPDFExtractor(client));
         extractors.add(new BondoraCapitalPDFExtractor(client));
         extractors.add(new ComdirectPDFExtractor(client));
         extractors.add(new CommerzbankPDFExtractor(client));
         extractors.add(new CommSecPDFExtractor(client));
+        extractors.add(new ComputersharePDFExtractor(client));
         extractors.add(new ConsorsbankPDFExtractor(client));
         extractors.add(new CreditSuisseAGPDFExtractor(client));
         extractors.add(new CrowdestorPDFExtractor(client));
@@ -67,9 +69,9 @@ public class PDFImportAssistant
         extractors.add(new GladbacherBankAGPDFExtractor(client));
         extractors.add(new HargreavesLansdownPlcExtractor(client));
         extractors.add(new HelloBankPDFExtractor(client));
+        extractors.add(new HypothekarbankLenzburgAGPDFExtractor(client));
         extractors.add(new INGDiBaPDFExtractor(client));
         extractors.add(new JTDirektbankPDFExtractor(client));
-        extractors.add(new JustTradePDFExtractor(client));
         extractors.add(new KBCGroupNVPDFExtractor(client));
         extractors.add(new KeytradeBankPDFExtractor(client));
         extractors.add(new MLPBankingAGPDFExtractor(client));
@@ -95,8 +97,10 @@ public class PDFImportAssistant
         extractors.add(new SelfWealthPDFExtractor(client));
         extractors.add(new SimpelPDFExtractor(client));
         extractors.add(new SolarisbankAGPDFExtractor(client));
-        extractors.add(new StakePDFExtractor(client));
+        extractors.add(new StakeshopPtyLtdPDFExtractor(client));
+        extractors.add(new SunrisePDFExtractor(client));
         extractors.add(new SuresseDirektBankPDFExtractor(client));
+        extractors.add(new SutorBankGmbHPDFExtractor(client));
         extractors.add(new SwissquotePDFExtractor(client));
         extractors.add(new TargobankPDFExtractor(client));
         extractors.add(new TigerBrokersPteLtdPDFExtractor(client));
@@ -108,6 +112,7 @@ public class PDFImportAssistant
         extractors.add(new WealthsimpleInvestmentsIncPDFExtractor(client));
         extractors.add(new WirBankPDFExtractor(client));
         extractors.add(new WeberbankPDFExtractor(client));
+        extractors.add(new ZuercherKantonalbankPDFExtractor(client));
     }
 
     public Map<Extractor, List<Item>> run(IProgressMonitor monitor, Map<File, List<Exception>> errors)
@@ -146,8 +151,7 @@ public class PDFImportAssistant
                 if (!extracted)
                 {
                     Predicate<? super Exception> isNotUnsupportedOperation = e -> !(e instanceof UnsupportedOperationException);
-                    List<Exception> meaningfulExceptions = warnings.stream().filter(isNotUnsupportedOperation)
-                                    .collect(Collectors.toList());
+                    List<Exception> meaningfulExceptions = warnings.stream().filter(isNotUnsupportedOperation).toList();
 
                     errors.put(inputFile.getFile(), meaningfulExceptions.isEmpty() ? warnings : meaningfulExceptions);
                 }
@@ -161,61 +165,10 @@ public class PDFImportAssistant
         }
 
         // post processing
-        itemsByExtractor.entrySet().stream() //
-                        .collect(Collectors.toMap(Entry<Extractor, List<Item>>::getKey,
-                                        e -> e.getKey().postProcessing(e.getValue())));
+        itemsByExtractor.entrySet().forEach(e -> e.getKey().postProcessing(e.getValue()));
 
         securityCache.addMissingSecurityItems(itemsByExtractor);
 
         return itemsByExtractor;
     }
-
-    public List<Item> runWithPlainText(File file, List<Exception> errors) throws FileNotFoundException
-    {
-        String extractedText = null;
-        try (Scanner scanner = new Scanner(file, StandardCharsets.UTF_8.name()))
-        {
-            extractedText = scanner.useDelimiter("\\A").next(); //$NON-NLS-1$
-        }
-        PDFInputFile inputFile = new PDFInputFile(file, extractedText);
-
-        return runWithInputFile(inputFile, errors);
-    }
-
-    public List<Item> runWithInputFile(PDFInputFile file, List<Exception> errors) throws FileNotFoundException
-    {
-        SecurityCache securityCache = new SecurityCache(client);
-
-        List<Item> items = null;
-        for (Extractor extractor : extractors)
-        {
-            List<Exception> warnings = new ArrayList<>();
-            items = extractor.extract(securityCache, file, warnings);
-
-            if (!items.isEmpty())
-            {
-                // we extracted items; remove all errors from all other
-                // extractors that
-                // did not find any transactions in this text
-                errors.clear();
-                errors.addAll(warnings);
-
-                items = extractor.postProcessing(items);
-
-                break;
-            }
-
-            errors.addAll(warnings);
-        }
-
-        if (items == null || items.isEmpty())
-            return Collections.emptyList();
-
-        Map<Extractor, List<Item>> itemsByExtractor = new HashMap<>();
-        itemsByExtractor.put(extractors.get(0), items);
-        securityCache.addMissingSecurityItems(itemsByExtractor);
-
-        return items;
-    }
-
 }
